# compliance-md

./: AGENTS.md  IDEA.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/compliance_md/: __init__.py  cli.py  enforcer.py
tests/: test_enforcer.py
